syntax = "proto3";

package proto;
option go_package="api/proto";

message Greeting {
  string FirstName = 1;
  string LastName = 2;
}

message GreetRequest {
  Greeting greeting = 1;
}

message GreetResponse {
  string result = 1;
}
message GreetManyTimesRequest {
  Greeting greeting = 1;
}

message GreetManyTimesResponse {
  string result = 1;
}



service GreetService{
  //Unary
  rpc Greet(GreetRequest) returns (GreetResponse) {};
  //Server Streaming
  rpc GreetManyTimes(GreetManyTimesRequest) returns (stream GreetManyTimesResponse) {};
}